Fixed tests, removed unnecessary